--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@import-normalize;
+
+@font-face {
+  font-family: "Nunito";
+  font-style: normal;
+  src: url(/public/fonts/Nunito-VariableFont_wght.ttf);
+}
+
+@font-face {
+  font-family: "Nunito";
+  font-style: italic;
+  src: url(/public/fonts/Nunito-Italic-VariableFont_wght.ttf);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
