--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
 @import "../../assets/styles/variables.scss";
+@import "../../assets/styles/mixins.scss";
 
 .header {
   padding: 13px 0;
@@ -29,12 +30,5 @@
 }
 
 .link {
-  display: block;
-  width: 92px;
-  padding: 8px;
-  background-color: $yellow;
-  border-radius: 80px;
-  color: black;
-  text-align: center;
-  text-decoration: none;
+  @include button;
 }
