--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,5 +2,28 @@ $mobile: 320px;
 $tablet: 768px;
 $desktop: 1024px;
 $centered: 1170px;
+
+$container-max-widths: (
+  sm: 328px,
+  md: 704px,
+  lg: 904px,
+  xl: 1170px,
+);
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 360px,
+  md: 768px,
+  lg: 1024px,
+  xl: 1170px,
+);
+
+$grey: #f8f8f8;
 $yellow: #f4e041;
 $white: #ffffff;
+$black: #000000;
+$body-bg: #f8f8f8;
+
+$font-family-sans-serif: "Nunito", "Helvetica Neue", sans-serif;
+
+$card-gap: 20px;
