--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -10,3 +10,28 @@
   text-align: center;
   text-decoration: none;
 }
+
+@mixin button-element {
+  border: none;
+  width: 112px;
+}
+
+@mixin container-paddings {
+  padding-right: 16px;
+  padding-left: 16px;
+
+  @media (min-width: $tablet) {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+
+  @media (min-width: $desktop) {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  @media (min-width: $centered) {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
