--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -7,15 +7,19 @@
   background-position: 50% 100%;
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: color;
-  padding: 40px 16px 71px;
+  padding-top: 40px;
+  padding-bottom: 71px;
   color: $white;
+  @include container-paddings;
 
   @media (min-width: $tablet) {
-    padding: 89px 32px 88px;
+    padding-top: 89px;
+    padding-bottom: 88px;
   }
 
   @media (min-width: $desktop) {
-    padding: 164px 60px 163px;
+    padding-top: 164px;
+    padding-bottom: 163px;
   }
 
   @media (min-width: $centered) {
