--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 
 .header {
   padding: 13px 0;
+  background-color: $white;
 }
 
 .container {
@@ -11,17 +12,7 @@
   align-items: center;
   padding: 0 16px;
 
-  @media (min-width: $tablet) {
-    padding: 0 32px;
-  }
-
-  @media (min-width: $desktop) {
-    padding: 0 60px;
-  }
-
-  @media (min-width: $centered) {
-    padding: 0;
-  }
+  @include container-paddings;
 }
 
 .navigation {
