--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   font-family: "Nunito", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
 }
 
 code {
